--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^16.5.0",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@nextui-org/react": "^2.2.9",
     "@tanstack/react-query": "^5.20.5",
     "@tanstack/react-query-devtools": "^5.17.18",
@@ -30,7 +31,6 @@
     "react-cookie": "^7.1.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-lottie": "^1.2.10",
     "react-notion-x": "^6.16.0",
     "react-toastify": "^10.0.4",
     "sharp": "^0.33.3",
@@ -42,7 +42,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-lottie": "^1.2.10",
     "@vanilla-extract/next-plugin": "^2.3.2",
     "axios": "^1.6.5",
     "eslint": "^8",
